<resources>
    <string name="app_name">DriveIt</string>
    <string name="login">Prijava</string>
    <string name="register">Registracija</string>
    <string name="registriraj">Registriraj</string>
    <string name="hintUserName">Uporabniško ime</string>
    <string name="hintPassword">Geslo</string>
    <string name="navigation_drawer_open">Odpri meni</string>
    <string name="navigation_drawer_close">Zapri meni</string>
    <string name="title_activity_main">ActivityMain</string>
    <string name="nav_header_title">Android Studio</string>
    <string name="nav_header_subtitle">android.studio@android.com</string>
    <string name="nav_header_desc">Navigation header</string>
    <string name="action_settings">Settings</string>
    <string name="title_activity_menu">Menu</string>
    <string name="title_activity_glavni_meni">GlavniMeni</string>
    <string name="naprava_nepodpira_b">Naprava ne podpira bluetoorh povezave!</string>
    <string name="prizgi_bluetooth">Prižgite bluetooth</string>
    <string name="povezi_bluetooth">Povežite napravo</string>
    <string name="uspesno_povezano">Uspešno povezano</string>
    <string name="ni_uspelo">Povezava ni uspela!</string>
    <string name="povezujem">Povezujem...</string>
    <string name="ze_povezavno">Povezava je že vzpostavljena</string>
    <string name="vse_podatke">Niste vnesli vseh podatkov!</string>
    <string name="neujemanje_gesel">Gesli se ne ujemata!</string>
    <string name="registracija_uspela">Registracija uspela</string>
    <string name="registracija_niUspela">Registracija ni uspela</string>
    <string name="koda_se_ne_ujemaa">Napačna koda</string>
    <string name="prijava_ni_uspela">Prijava ni uspela</string>
    <string name="uporabnik_ne_obstaja">Uporabnik ne obstaja</string>
    <string name="dodaj">+</string>
    <string name="voznje">Vožnje</string>
    <string name="naprave">Naprave</string>
    <string name="ime">Ime</string>
    <string name="cena">Cena</string>
    <string name="kolicina">Količina</string>
    <string name="ne_zaznavam">Ne zaznavam obraza</string>
    <string name="bravo">Bravo odklenili ste z nasmehom! Nasmeh: </string>
    <string name="premalo_nasmeha">Malo bolj se nasmejte!  Nasmeh: </string>
    <string name="ni_povezave">Ni internetne povezave"</string>
    <string name="spremeni">Spremeni</string>
    <string name="napaka">Prišlo je do napake!</string>
    <string name="o_aplikaciji">O aplikaciji</string>
    <string name="odjava">Odjava</string>
</resources>
